Make non-setuid conflict with setuid to avoid upgrade problems
Signed-off-by: Carsten Munk <carsten.munk@gmail.com>

--- a/xorg-x11-server.yaml
+++ b/xorg-x11-server.yaml
@@ -125,6 +125,8 @@ SubPackages:
           provides the basic low level functionality which full fledged
           graphical user interfaces (GUIs) such as GNOME and KDE are designed
           upon.
+      Conflicts:
+          - "%{name}-Xorg-setuid"
       Requires:
           - xorg-x11-drv-mouse
           - xorg-x11-drv-keyboard
