--- a/xorg-x11-server.yaml
+++ b/xorg-x11-server.yaml
@@ -4,7 +4,7 @@ Version: 1.10.6
 Release: 1
 Group: System/X11
 License: MIT
-URL: http://www.x.org
+URL: http://cgit.freedesktop.org/xorg/xserver
 Sources:
     - http://xorg.freedesktop.org/archive/individual/xserver/xorg-server-%{version}.tar.bz2
 Patches:
