--- a/xorg-x11-server.yaml
+++ b/xorg-x11-server.yaml
@@ -7,6 +7,8 @@ License: MIT
 URL: http://cgit.freedesktop.org/xorg/xserver
 Sources:
     - http://xorg.freedesktop.org/archive/individual/xserver/xorg-server-%{version}.tar.bz2
+Patches:
+    - cache-xkbcomp-output-for-fast-start-up.patch
 Requires:
     - libdrm >= 2.4.0
 PkgConfigBR:
